<resources>
    <string name="app_name">Manarat International University</string>

    <string name="thanks_to_teacher">Specially thanks to all of my honorable teacher for guiding me, inspiring me and making me what i am today.</string>
    <string name="design_and_develop">Designed and developed by</string>
    <string name="my_name">Md. Mahmudul Islam</string>
    <string name="batch_info">Batch 43th, department of CSE, MIU</string>
    <string name="refresh">Refresh</string>
    <string name="miu_portal">MIU Portal</string>
    <string name="light_dark">Light/Dark</string>
    <string name="share">Share</string>
    <string name="rate_app">Rate App</string>
    <string name="developer">Developer</string>
    <string name="contact">Contact:</string>
    <string name="mahamudulmiu17_gmail_com">mahamudulmiu17@gmail.com</string>
    <string name="no_internet">No internet connection</string>
    <string name="connect_to_internet">Connect to the internet and try again</string>
    <string name="please_try">Retry</string>
    <string name="home_page">Home Page</string>
</resources>